[tool.poetry]
name = "vidl"
version = "3.4.11"
description = "Python script to download video/audio, built with youtube-dl"
authors = ["Kasper <kasperkh.kh@gmail.com>"]

readme = "README.md"

repository = "https://github.com/spectralkh/vidl"

keywords = ['youtube', 'download', 'video', 'audio', 'music']

[tool.poetry.dependencies]
python = "^3.5"
youtube-dl = ">2020"
colorama = "^0.3.9"
colorboy = "^1.0.1"
mutagen = "^1.42"
deep-filter = "^1.0"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "*"

[tool.poetry.scripts]
vidl = 'vidl.run:main'
