[tool.poetry]
name = "vidl"
version = "3.5.1"
description = "Downloads video/audio from anywhere, adding thumbnails and mp3 metadata if applicable"
authors = ["kasper.space"]
readme = "README.md"
repository = "https://github.com/probablykasper/vidl"
keywords = ['youtube', 'download', 'video', 'audio', 'music']

[tool.poetry.dependencies]
python = "^3.5"
youtube-dl = ">2020"
colorama = "^0.3.9"
colorboy = "^1.0.1"
mutagen = "^1.42"
deep-filter = "^1.0"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "*"

[tool.poetry.scripts]
vidl = 'vidl.run:main'
