[tool.poetry]
name = "vidl"
version = "4.3.1"
description = "Downloads video/audio from anywhere, adding thumbnails and mp3 metadata if applicable"
authors = ["kasper.space"]
readme = "README.md"
repository = "https://github.com/probablykasper/vidl"
keywords = ['youtube', 'download', 'video', 'audio', 'music']

[tool.poetry.dependencies]
python = "^3.6"
colorboy = "^1.0.3"
mutagen = "^1.45.1"
deep-filter = "^1.0.1"
appdirs = "^1.4.4"
yt-dlp = ">2021.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"

[tool.poetry.scripts]
vidl = 'vidl.run:main'
